bindings/rust/src/sys.rs


    // ── wish_client_c.h: logging ──────────────────────────────────────────────

    pub fn wish_log(
        client: wish_client_handle,
        level: *const c_char,
        msg: *const c_char,
    ) -> wish_error;
    pub fn wish_log_debug(client: wish_client_handle, msg: *const c_char) -> wish_error;
    pub fn wish_log_info(client: wish_client_handle, msg: *const c_char) -> wish_error;
    pub fn wish_log_warn(client: wish_client_handle, msg: *const c_char) -> wish_error;
    pub fn wish_log_error(client: wish_client_handle, msg: *const c_char) -> wish_error;

    // ── wish_client_c.h: automation ───────────────────────────────────────────

    pub fn wish_automation_get_tree(
        client: wish_client_handle,
        root: *const c_char,
        out_json: *mut *mut c_char,
    ) -> wish_error;
    pub fn wish_automation_get_logs(
        client: wish_client_handle,
        out_json: *mut *mut c_char,
    ) -> wish_error;
    pub fn wish_automation_screenshot(
        client: wish_client_handle,
        out_png_data: *mut *mut c_char,
        out_len: *mut usize,
    ) -> wish_error;
    pub fn wish_automation_mouse_move(client: wish_client_handle, x: f32, y: f32) -> wish_error;
    pub fn wish_automation_mouse_button(
        client: wish_client_handle,
        button: c_int,
        down: c_int,
    ) -> wish_error;
    pub fn wish_automation_key_event(
        client: wish_client_handle,
        keycode: c_int,
        down: c_int,
    ) -> wish_error;
    pub fn wish_automation_text_input(
        client: wish_client_handle,
        utf8_text: *const c_char,
    ) -> wish_error;
}
